Use CSS provider to control colors used in UI

This style looks the same as Hitori using Adwaita prior to GTK+ 3.13.3

https://bugzilla.gnome.org/show_bug.cgi?id=732300